GVT-3337: Overflow-wrap long continuous value in infobox values GVT-3338: Disable save button in operational point edit dialogs if initial state isn't valid GVT-3352: Make sure that draft delete confirmation dialog is closed properly in operational point edit dialogs General: Update webpack and hopefully fix frontend compile stopping after certain TS errors

--- a/ui/src/tool-panel/infobox/infobox.module.scss
+++ b/ui/src/tool-panel/infobox/infobox.module.scss
@@ -76,6 +76,7 @@
         margin-left: 24px;
         flex-grow: 1;
         white-space: pre-wrap;
+        overflow-wrap: anywhere;
 
         &--error {
             color: vayla-design.$color-red-dark;
